Replace deprecated methods with modern ones