@@ -538,29 +538,21 @@ public abstract class DatabaseBackedProcessor
         .definition()
         .parameters()
         .<ExternalId>flatMap(
-            p -> {
-              Stream<? extends ExternalId> stream;
-              try {
-                stream =
-                    arguments.has(p.name())
-                        ? p.type()
-                            .apply(
-                                new ExtractInputExternalIds(
-                                    MAPPER,
-                                    arguments.get(p.name()),
-                                    id -> {
-                                      final Optional<FileMetadata> result = pathForId(id);
-                                      if (result.isEmpty()) {
-                                        unresolvedIds.add(id);
-                                      }
-                                      return result;
-                                    }))
-                        : Stream.empty();
-              } catch (IllegalArgumentException e) {
-                stream = Stream.empty();
-              }
-              return stream;
-            })
+            p ->
+                arguments.has(p.name())
+                    ? p.type()
+                        .apply(
+                            new ExtractInputExternalIds(
+                                MAPPER,
+                                arguments.get(p.name()),
+                                id -> {
+                                  final Optional<FileMetadata> result = pathForId(id);
+                                  if (result.isEmpty()) {
+                                    unresolvedIds.add(id);
+                                  }
+                                  return result;
+                                }))
+                    : Stream.empty())
         .collect(
             Collectors.toCollection(
                 () ->
@@ -847,7 +839,7 @@ public abstract class DatabaseBackedProcessor
                               // Get recovery state back
                               JsonNode recoveryState =
                                   activeOperations
-                                      .get(0)
+                                      .getFirst()
                                       .recoveryState()
                                       .get("state")
                                       .get("metadata");
@@ -1748,7 +1740,8 @@ public abstract class DatabaseBackedProcessor
                                                   return handler.dryRunResult();
                                                 }
                                               } else if (candidates.size() == 1) {
-                                                final long workflowRunId = candidates.get(0).id();
+                                                final long workflowRunId =
+                                                    candidates.getFirst().id();
                                                 final HashMap<Pair<String, String>, List<String>>
                                                     knownMatches = new HashMap<>();
                                                 final ArrayList<ExternalKey> missingKeys =
@@ -1770,14 +1763,15 @@ public abstract class DatabaseBackedProcessor
                                                 }
                                                 if (!missingKeys.isEmpty()) {
                                                   return handler.missingExternalKeyVersions(
-                                                      candidates.get(0).workflowRun(), missingKeys);
+                                                      candidates.getFirst().workflowRun(),
+                                                      missingKeys);
                                                 }
 
                                                 // Exit early if no launching is to occur (e.g. dry
                                                 // run or validate mode).
                                                 if (!handler.allowLaunch()) {
                                                   return handler.matchExisting(
-                                                      candidates.get(0).workflowRun());
+                                                      candidates.getFirst().workflowRun());
                                                 }
 
                                                 addNewExternalKeyVersions(
@@ -1839,7 +1833,7 @@ public abstract class DatabaseBackedProcessor
                                                           metadata,
                                                           externalIds,
                                                           liveness(workflowRunId),
-                                                          candidates.get(0).created(),
+                                                          candidates.getFirst().created(),
                                                           externalKeys,
                                                           consumableResources,
                                                           transaction);
@@ -1856,7 +1850,7 @@ public abstract class DatabaseBackedProcessor
                                                           version,
                                                           candidateId,
                                                           consumableResources,
-                                                          candidates.get(0).created(),
+                                                          candidates.getFirst().created(),
                                                           new Runnable() {
                                                             private boolean launched;
 
@@ -1882,9 +1876,10 @@ public abstract class DatabaseBackedProcessor
                                                           }));
                                                 } else {
                                                   updateLastAccessed(
-                                                      transaction, candidates.get(0).workflowRun());
+                                                      transaction,
+                                                      candidates.getFirst().workflowRun());
                                                   return handler.matchExisting(
-                                                      candidates.get(0).workflowRun());
+                                                      candidates.getFirst().workflowRun());
                                                 }
                                               } else {
                                                 return handler.multipleMatches(
